--- a/package.json
+++ b/package.json
@@ -3,12 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "fluent-reveal-effect": "^1.1.1",
+    "google-map-react": "^2.1.9",
     "react": "^17.0.1",
+    "react-accessible-accordion": "^3.3.4",
+    "react-bnb-gallery": "^1.4.4",
     "react-dom": "^17.0.1",
+    "react-image-magnify": "^2.7.4",
+    "react-modal": "^3.12.1",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-tabs": "^3.2.0",
+    "react-transition-group": "^4.4.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
